# polyline-offset

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_offset
include/: polyline_offset.h
include/polyline_offset/: polyline_offset.h  types.h
src/: polyline_offset.cpp
test/: test_offset.cpp
tests/: test_offset.cpp
